add buggy basic files and code

--- a/Views/Home/Form.cshtml
+++ b/Views/Home/Form.cshtml
@@ -7,5 +7,13 @@
   </head>
   <body>
     <h1>This is a project template</h1>
+
+    <h1>Make A Tamagotchi</h1>
+<form action="/Tam" method="post">
+  <label for="new-tam">Name Your Tamagotchi</label>
+  <input id="new-tam" name="new-tam" type="text">
+  <button type="submit">Create</button>
+</form>
+
   </body>
 </html>
